bdr.BDR.scala.error
Compilation error:
BDR:3: error: identifier expected but integer literal found.
  if (message[0]=='R') {
              ^BDR:40: error: ']' expected but '}' found.
} 
^