bdr.BDR.scala.code
while (isOverMessage()) {
  var message=readMessage();
	if (message[0]=='R') {
    right();
    forward();
  }
  else if (message[0]=='L') {
    left();
    forward();
  }
  else if (message[0]=='I') {
    right();
    right();
    forward();
  }
  else if (message[0]=='A') {
    forward();
  }
  else if (message[0]=='B') {
    forward();
    forward();
  }
  else if (message[0]=='C') {
    forward();
    forward();
    forward();
  }
  else if (message[0]=='Z') {
    backward();
  }
  else if (message[0]=='Y') {
    backward();
    backward();
  }
  else if (message[0]=='X') {
    backward();
    backward();
    backward();
  }
}